limited submit input to 20 chars. Added setTimeout() for cooldown to rate limit character creation to prevent overlaps

--- a/splmns-animation/src/components/Character.css
+++ b/splmns-animation/src/components/Character.css
@@ -9,7 +9,7 @@
     bottom: 0;
     left: 0;
     height: 300px; 
-    width: 200px;  
+    width: 250px;  
     will-change: transform;
 }
 
